# algorithms-project-69

./: .gitignore  Makefile  README.md  pyproject.toml
search_engine/: search_engine.py
tests/: test_search.py
