[project]
authors = [
    {name = "Hexlet team", email = "team@hexlet.io"},
]
requires-python = "<4.0,>=3.12"
name = "search-engine"
version = "0.1.0"
description = "search_engine application"
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pip>=24.0",
    "uv>=0.5.0"
]

[project.scripts]
search-engine-package = "search_engine.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_engine"]
