[project]
authors = [
    {name = "Ilya Voronin", email = "voronin.i.a@yandex.ru"},
]
requires-python = "<4.0,>=3.12"
name = "search-engine"
version = "0.1.0"
description = "search_engine application"
readme = "README.md"

[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["Ilya Voronin <voronin.i.a@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
ruff = "^0.7"
pytest = "^8.3" 
uv = "^0.5"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pip>=24.0",
    "uv>=0.5.0"
]

[project.scripts]
search-engine-package = "search_engine.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_engine"]
